--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Toqe ~ Tobias Ebert
 
 # Short bio or description (displayed in the header)
-description: 
+description: Software development enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/9871341
